infra/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlops-dashboard
  namespace: ml-credit-risk
  labels:
    app: mlops-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlops-dashboard
  template:
    metadata:
      labels:
        app: mlops-dashboard
    spec:
      containers:
        - name: dashboard
          image: shrinet82/mlops-dashboard:latest
          ports:
            - containerPort: 8501
              name: http
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: mlops-dashboard
  namespace: ml-credit-risk
  labels:
    app: mlops-dashboard
spec:
  type: NodePort
  selector:
    app: mlops-dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
      nodePort: 30085
